# advent-of-code-2023

./: .gitignore  README.md  data.txt  pyproject.toml
src/advent_of_code_2023/: utils.py
src/advent_of_code_2023/day02/: part2.py
src/advent_of_code_2023/day03/: part1.py
src/advent_of_code_2023/day04/: part2.py
src/advent_of_code_2023/day05/: part2.py
src/advent_of_code_2023/day06/: part2.py
src/advent_of_code_2023/day08/: part2.py
src/advent_of_code_2023/day1/: part1.py  part2.py
src/advent_of_code_2023/day10/: part1.py  part2.py
src/advent_of_code_2023/day11/: part1.py  part2.py
src/advent_of_code_2023/day12/: part1.py  part2.py
src/advent_of_code_2023/day13/: part1.py  part2.py
src/advent_of_code_2023/day14/: part1.py  part2.py
src/advent_of_code_2023/day15/: part1.py  part2.py
src/advent_of_code_2023/day16/: part1.py  part2.py
src/advent_of_code_2023/day17/: part1.py  part2.py
src/advent_of_code_2023/day18/: part1.py  part2.py
src/advent_of_code_2023/day19/: part1.py  part2.py
src/advent_of_code_2023/day2/: part1.py
src/advent_of_code_2023/day20/: part1.py  part2.py
src/advent_of_code_2023/day21/: part1.py  part2.py
src/advent_of_code_2023/day22/: part1.py  part2.py
src/advent_of_code_2023/day23/: part1.py  part2.py
src/advent_of_code_2023/day24/: part1.py  part2.py
src/advent_of_code_2023/day25/: part1.py
src/advent_of_code_2023/day3/: part2.py
src/advent_of_code_2023/day4/: part1.py
src/advent_of_code_2023/day5/: part1.py
src/advent_of_code_2023/day6/: part1.py
src/advent_of_code_2023/day7/: part1.py  part2.py
(+3 files in other folders)
